# ia-bootcamp-2005

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_RAG_FIX.md  Makefile  README.md  pyproject.toml
data/: README.md
data/configs/: profile_schema.json
data/initial_knowledge/: sample_docs.txt
docs/: API.md  API_UPDATE_SUMMARY.md  CONFIGURATION.md  DYNAMIC_CONFIGURATION.md  INSTALLATION.md  LLM.md  MCP.md  MEMORY.md  MEMORY_IMPLEMENTATION_SUMMARY.md  MIGRATION_LANGGRAPH.md  RAG.md  RAG_IMPLEMENTATION_SUMMARY.md  RAG_QUICKSTART.md  USER_PROFILE_IMPLEMENTATION.md  USER_PROFILE_QUICKSTART.md  VALIDATION_GUIDE.md  api_endpoints.md  llm_interface_guide.md  memory_guide.md  rag_guide.md
frontend/: .env.example  .gitignore  DEBUG_THEME.md  README.md  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/docs/: CHECKLIST.md  PHASE1_QUICKSTART.md  PHASE1_TESTING.md  PHASE2_IMPLEMENTATION.md  PHASE3_CORRECTIONS.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  QUICKSTART.md  README.md  SETUP.md
frontend/src/: App.jsx  index.css
src/agent-lab/: __init__.py  models.py
src/agentlab/: __init__.py
tests/api/: EXAMPLE_EXECUTION.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  NEWMAN_GUIDE.md  QUICKSTART.md  README.md
tests/integration/: test_chat_tools_integration.py  test_llm_integration.py  test_rag_mysql_integration.py
tests/unit/: test_chat_routes.py  test_config_models.py  test_context_builder.py  test_crud_delete.py  test_llm_interface.py  test_llm_with_tools.py  test_mcp_tools.py  test_memory_isolation.py  test_memory_processor.py  test_memory_routes.py  test_memory_service.py  test_mpc_routes.py  test_rag_processor.py  test_rag_routes.py  test_rag_service_retrieval.py  test_session_config_crud.py  (+2 more)
(+119 files in other folders)
